preserve whitespace and fix some ts/svetle errors

--- a/src/components/global.css
+++ b/src/components/global.css
@@ -14,6 +14,10 @@ p {
   max-width: 80ch;
 }
 
+.pre {
+  white-space: pre;
+}
+
 #main-drawer-content {
   background: #fff;
 }
